# tud_firefly_landing_sim

./: README.md
tud_firefly_application/: CMakeLists.txt  CMakeLists.txt~  package.xml~
tud_firefly_application/include/tud_firefly_application/: landing_predictor.h
tud_firefly_application/params/: landing_monitor.yaml  landing_state_machine.yaml
tud_firefly_application/params/marker_config/: 4_aruco_marker.yml  aruco_76.yml~  aruco_marker_76.yml
tud_firefly_application/src/nodes/ar_sys_marker_detection/: ar_sys_single_board_mod.cpp
tud_firefly_application/src/nodes/landing_monitor/: landing_monitor_node.cpp  landing_monitor_node.h
tud_firefly_application/src/nodes/landing_state_machine/: landing_state_machine_node.cpp  landing_state_machine_node.h
tud_firefly_control/: CMakeLists.txt  package.xml~
tud_firefly_control/include/tud_firefly_control/: attitude_controller.h  differential_tracker.h  generic_pid.h  landing_controller.h  lee_position_controller_mod.h  polynomial.h  tud_firefly_common.h  twist_controller.h
tud_firefly_control/params/: firefly_attitude_control.yaml~  firefly_attitude_controller.yaml  firefly_attitude_controller.yaml~  firefly_twist_controller.yaml  firefly_twist_controller.yaml~  landing_controller.yaml~  lee_controller_firefly.yaml  lee_controller_firefly.yaml~
tud_firefly_control/src/nodes/: attitude_controller_node.cpp  attitude_controller_node.h  joy_controller_node.cpp  landing_controller_node.cpp  landing_controller_node.h  lee_position_controller_mod_node.cpp  lee_position_controller_mod_node.h  position_W_tracker_node.cpp  twist_controller_node.cpp  twist_controller_node.h
tud_firefly_description/: CMakeLists.txt  package.xml
tud_firefly_description/meshes/markers/: 3_circle_board.dae  4_aruco.dae  4_aruco_board.dae  4_circle_board.dae  aruco_100.dae  aruco_76.dae  aruco_76_board.dae  circle_board.dae
tud_firefly_description/urdf/: aruco_board.xacro  diff_wheeled_UGV.xacro  firefly_base_mod.xacro  firefly_for_landing.gazebo  firefly_mod.xacro  generic_camera.xacro  multirotor_base_mod.xacro  odometry_plugin_mod.xacro  ray_sensor.xacro  tud_component_snippets.xacro  update_event_publisher.xacro  whycon_board.xacro
tud_firefly_gazebo/: CMakeLists.txt  package.xml
tud_firefly_gazebo/launch/: firefly_landing_control.launch  firefly_landing_sim.launch  spawn_world.launch  spawn_world.launch~  test.launch  test_landing_monitor.launch
tud_firefly_gazebo/rviz_cfg/: tud_firefly_landing_sim.rviz
tud_firefly_gazebo/worlds/: ArDrone_AprilTags.world  basic.world  test.world
tud_firefly_gazebo_plugins/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
tud_firefly_gazebo_plugins/include/tud_firefly_gazebo_plugins/: gazebo_bag_mod_plugin.h  gazebo_controller_interface_mod.h  gazebo_imu_mod_plugin.h  gazebo_motor_model_mod.h  gazebo_odometry_mod_plugin.h  gazebo_sonar_plugin.h  gazebo_update_signal_plugin.h
tud_firefly_gazebo_plugins/src/: gazebo_bag_mod_plugin.cpp  gazebo_controller_interface_mod.cpp  gazebo_imu_mod_plugin.cpp  gazebo_motor_model_mod.cpp  gazebo_odometry_mod_plugin.cpp  gazebo_sonar_plugin.cpp  gazebo_update_signal_plugin.cpp
tud_firefly_landing_sim/: CMakeLists.txt~  package.xml
tud_firefly_state_estimation/: CMakeLists.txt  CMakeLists.txt~  package.xml~
tud_firefly_state_estimation/include/tud_firefly_state_estimation/: complementary_filter.h  firefly_ekf.h  firefly_filter_base.h  firefly_filter_common.h  firefly_ros_filter.h  firefly_ros_filter_types.h  mahony_complementary_filter.h
tud_firefly_state_estimation/params/: complementary_filter.yaml  firefly_ekf_landing.yaml  mahony_complementary_filter.yaml
tud_firefly_state_estimation/src/nodes/: complementary_filter_node.cpp  mahony_complementary_filter_node.cpp  state_estimation_node.cpp
