<?xml version="1.0"?>
<package>
  <name>tud_firefly_landing_sim</name>
  <version>1.0.0</version>
  <description>The tud_firefly_landing_sim package</description>
  <maintainer email="truecarfield@hotmail.com">truecarfield</maintainer>
  <author>Ding Zhang</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tud_firefly_control</run_depend>
  <run_depend>tud_firefly_gazebo</run_depend>
  <run_depend>tud_firefly_gazebo_plugins</run_depend>
  <run_depend>tud_firefly_state_estimation</run_depend>
  <run_depend>tud_firefly_application</run_depend>
  <run_depend>tud_firefly_description</run_depend>
  <export>
   <metapackage/>
  </export>
</package>
